fixed overflow padding on instructions screen

--- a/src/components/game-instructions/styles.scss
+++ b/src/components/game-instructions/styles.scss
@@ -2,7 +2,7 @@
   font-size: 26px;
   text-align: center;
 
-  padding: 16px 0;
+  padding: 12px 0;
 }
 
 .game-instructions-text {
@@ -18,6 +18,12 @@
   padding: 0 36px;
 
   span {
-    padding-bottom: 16px;
+    padding-bottom: 12px;
   }
+}
+
+.game-start-button {
+  padding: 12px 0 16px;
+
+  align-items: center;
 }
