--- a/src/components/main-game-start/styles.scss
+++ b/src/components/main-game-start/styles.scss
@@ -16,12 +16,6 @@
   padding: 48px 16px 0;
 }
 
-.game-start-button {
-  padding: 16px 0;
-
-  align-items: center;
-}
-
 .game-start-back {
   position: absolute;
   left: 0;
